reponsitioned the body to move MAIN down instead of individual elements, fixed spacing with mission and everything following

--- a/Resources/styles.css
+++ b/Resources/styles.css
@@ -1,3 +1,7 @@
+* {
+    box-sizing: border-box;
+}
+
 body {
     background-color: black;
     opacity: .95;
@@ -5,6 +9,7 @@ body {
     font-size: 22px;
     font-family: helvetica;
     text-align: center;
+    margin: 0;
 }
 
 header{
@@ -13,6 +18,11 @@ header{
     z-index: 1;
     width: 100%;
     align-items: center;
+}
+
+main {
+    position: relative;
+    top: 70px;
 }
 
 h2 {
@@ -29,6 +39,8 @@ h4 {
     display: inline-flex;
     width: 100%;
     align-items: center;
+    background-color: black;
+    height: 100%;
 }
 
 .header-wrapper .logo {
@@ -53,9 +65,11 @@ h4 {
 .nav li {
     list-style: none;
     display: inline-flex;
-    color: seashell;
     text-decoration: underline;
+    align-items: center;
 }
+
+/*   Mission Section   */
 
 .mission {
     background-image: url('./Skins/img-mission-background.webp');
@@ -67,8 +81,6 @@ h4 {
     display: flex;
     align-items: center;
     margin: 0 auto;
-    position: relative;
-    top: 69px;
 }
 
 .mission-content {
@@ -80,4 +92,10 @@ h4 {
     padding: .7%;
     border: 0;
     margin: 0;
+}
+
+/*   Featured Section   */
+
+.featured {
+    
 }
